Whoops fixed .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,68 +1,2 @@
-<h1 align="center">Project name</h1>
-
-> Guidance - brevity is important to building a culture of reading the docs. The README should be as short as it possibly can be, while providing the reader with the ability to run the repo locally. Thorough documentation is great, but consider whether some pieces of info need to be in the README or are better suited for an advanced guide.
-
-Here's a one or two line description that provides helpful context about this project and how it fits into the rest of the Sonder eco-system.
-
-## Table of Contents
-
--   [Setup](#setup)
--   [Testing](#setup)
--   [Deployment](#deployment)
--   [Troubleshoot](#troubleshoot)
--   [Additional Resources](#additional-resources)
-
-## Setup
-
-There are two ways to setup your environment...
-- [With Docker](#with-docker)
-- [With your own machine](#with-your-own-machine)
-
-### General Prerequisites
-
-#### Package Managers
-
-`asdf`/`rbenv`, `ruby`, and `homebrew`...
-
-#### Environment Variables
-
-Ask ... for `env.local`...
-
-### With Docker
-
-### With Your Own Machine
-
-## Testing
-
-- `render()` comes from [React Testing Library](https://testing-library.com/docs/react-testing-library/intro)
-- `it()` and `expect()` come from [Jest](https://jestjs.io/)
-- `<MockedProvider />` comes from [Apollo](https://www.apollographql.com/docs/react/development-testing/testing/#mockedprovider)
-- For select inputs, we use [React Select](https://react-select.com/home), with [react-select-event](https://testing-library.com/docs/ecosystem-react-select-event)
-
-```
-# Run tests
-
-# Jest tips
-
-```
-
-## Deployment
-
-This section includes intructions to deploy on [staging](#staging) and [production](#production) environment
-
-### Staging
-### Production
-
-## Troubleshoot
-
-If you encounter any issue excluded from the ones below, please drop us a message on our [Slack Channel](https://www.example.com)
-
-**Q**: ...
-
-_A_: ...
-
-## Additional Resources
-
-In order to contribute to this project, you might need to familiarize yourself with certain of these libraries or frameworks
-- [React](https://reactjs.org/)
-- [Cypress](https://www.cypress.io/)
+.DS_Store
+.idea
